[tool.poetry]
name = "pythonlearning"
version = "0.1.0"
description = "My Python learning"
authors = ["Anoop N <anoupz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^19.10b0"
request = "^2019.4.13"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
